# Travel-copilot-starter

./: .gitignore  README.md  langfuse_learning_reference.html  pyproject.toml
app/: main.py
app/chat/: agent.py  model_factory.py  prompt_loader.py  session_state.py  state_manager.py  tool_router.py
app/chat/dynamic_mcp/: agent.py  executor.py  models.py  planner.py  registry.py  tool_catalog.py
app/config/: settings.py
app/mcp/: base.py  currency_client.py  travel_planning_client.py  weather_client.py
app/observability/: langfuse_client.py  tracing.py
app/ui/: deterministic_page.py  dynamic_mcp_page.py  old_rendering.py  rendering.py  rendering_common.py  streamlit_app.py  ui_state.py
