[project]
name = "travel-copilot-starter"
version = "0.1.0"
description = ""
authors = [
    { name = "Shourya Mangal", email = "Shouryamangal@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "streamlit (>=1.55.0,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "mcp (>=1.26.0,<2.0.0)",
    "langfuse (>=4.0.1,<5.0.0)",
    "langchain (>=1.2.13,<2.0.0)",
    "langchain-openai (>=1.1.12,<2.0.0)",
    "langchain-ollama (>=1.0.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"